[package]
name = "stm32f429"
version = "0.6.1"
authors = ["Cody Schafer <dev@codyps.com>", "Astro <astro@spaceboyz.net>"]
description = "Peripheral access API for STM32F429 microcontrollers"
documentation = "https://docs.rs/stm32f429"
keywords = ["arm", "cortex-m", "stm32", "svd2rust"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jmesmon/stm32f429"
include = ["Cargo.toml", "**/*.rs", "generate.sh", "STM32F429.patch", "README.md", "LICENSE-*", "device.x"]

[dependencies]
bare-metal = "0.2"
cortex-m = { version = "0.7", features = ["const-fn"] }
vcell = "0.1"

[dependencies.cortex-m-rt]
optional = true
version = "0.6"
features = ["device"]

[features]
rt = ["cortex-m-rt"]
